aws/2-leshan/cf-002-leshan.yaml
AWSTemplateFormatVersion: "2010-09-09"
Description: AWS CloudFormation template to create an EC2 instance

Parameters:
  InstanceType:
    Description: EC2 Instance Type
    Type: String
    Default: t2.micro
    AllowedValues: [t2.micro, t2.small, t2.medium, t2.large, m4.large]

  KeyName:
    Description: Name of an existing EC2 KeyPair to enable SSH access
    Type: AWS::EC2::KeyPair::KeyName
    ConstraintDescription: Must be the name of an existing EC2 KeyPair.

  VPCId:
    Description: The ID of your existing VPC
    Type: AWS::EC2::VPC::Id

  SubnetId:
    Description: The ID of your existing Subnet
    Type: AWS::EC2::Subnet::Id

  ImageId:
    Description: The ID of the AMI to launch
    Type: AWS::EC2::Image::Id

Resources:
  leshanEC2Instance:
    Type: AWS::EC2::Instance
    Properties:
      ImageId: !Ref ImageId
      InstanceType: !Ref InstanceType
      KeyName: !Ref KeyName
      NetworkInterfaces:
        - AssociatePublicIpAddress: true
          DeviceIndex: 0
          GroupSet:
            - !Ref leshanSecurityGroup
          SubnetId: !Ref SubnetId
      UserData:
        Fn::Base64: |
          #cloud-config

  leshanSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Enable SSH, HTTP, HTTPS and CoAP access from any location
      VpcId: !Ref VPCId
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
          CidrIpv6: "::/0"
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
          CidrIpv6: "::/0"
        - IpProtocol: tcp
          FromPort: 443
          ToPort: 443
          CidrIp: 0.0.0.0/0
          CidrIpv6: "::/0"
        - IpProtocol: udp
          FromPort: 5683
          ToPort: 5683
          CidrIp: 0.0.0.0/0
          CidrIpv6: "::/0"
        - IpProtocol: udp
          FromPort: 5684
          ToPort: 5684
          CidrIp: 0.0.0.0/0
          CidrIpv6: "::/0"
      SecurityGroupEgress:
        - CidrIp: 0.0.0.0/0
          CidrIpv6: "::/0"
          IpProtocol: -1
